--- a/app/styles/ember-skeleton/generic/_list-group.scss
+++ b/app/styles/ember-skeleton/generic/_list-group.scss
@@ -1,61 +1,59 @@
-.wrapper {
-  .list-group {
-    display: flex;
-    flex-direction: column;
-    padding-left: 0;
-    margin-bottom: 0;
+.list-group {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+.list-group-item {
+  position: relative;
+  display: block;
+  color: $list-group-color;
+  padding: $list-group-item-padding-y $list-group-item-padding-x;
+  margin-bottom: -$list-group-border-width;
+  background-color: $list-group-bg;
+  border: $list-group-border-width solid $list-group-border-color;
+  &:hover,
+  &:focus {
+    z-index: 1;
+    text-decoration: none;
   }
 
-  .list-group-item {
-    position: relative;
-    display: block;
-    color: $list-group-color;
-    padding: $list-group-item-padding-y $list-group-item-padding-x;
-    margin-bottom: -$list-group-border-width;
-    background-color: $list-group-bg;
-    border: $list-group-border-width solid $list-group-border-color;
-    &:hover,
-    &:focus {
-      z-index: 1;
-      text-decoration: none;
-    }
-
-    &.disabled,
-    &:disabled {
-      color: $list-group-disabled-color;
-      background-color: $list-group-disabled-bg;
-      border-color: darken($list-group-disabled-bg, 10%);
-    }
-
-    &.active {
-      z-index: 2;
-      color: $list-group-active-color;
-      background-color: $list-group-active-bg;
-      border-color: $list-group-active-border-color;
-    }
+  &.disabled,
+  &:disabled {
+    color: $list-group-disabled-color;
+    background-color: $list-group-disabled-bg;
+    border-color: darken($list-group-disabled-bg, 10%);
   }
 
-  .list-group-item-action {
-    width: 100%;
-    color: $list-group-color;
-    text-align: inherit;
-    &:hover,
-    &:focus {
-      color: $list-group-action-hover-color;
-      text-decoration: none;
-      background-color: $list-group-action-hover-bg;
-    }
-    &.disabled {
-      cursor: not-allowed;
-    }
+  &.active {
+    z-index: 2;
+    color: $list-group-active-color;
+    background-color: $list-group-active-bg;
+    border-color: $list-group-active-border-color;
+  }
+}
 
-    &:active {
-      color: $list-group-active-color;
-      background-color: $list-group-active-bg;
-    }
+.list-group-item-action {
+  width: 100%;
+  color: $list-group-color;
+  text-align: inherit;
+  &:hover,
+  &:focus {
+    color: $list-group-action-hover-color;
+    text-decoration: none;
+    background-color: $list-group-action-hover-bg;
+  }
+  &.disabled {
+    cursor: not-allowed;
   }
 
-  @each $color, $value in $theme-colors {
-    @include list-group-item-variant($color, theme-color-level($color, -9), theme-color-level($color, 2));
+  &:active {
+    color: $list-group-active-color;
+    background-color: $list-group-active-bg;
   }
+}
+
+@each $color, $value in $theme-colors {
+  @include list-group-item-variant($color, theme-color-level($color, -9), theme-color-level($color, 2));
 }
